aew.yml
cat <<EOF | kubectl apply -f -

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: productpage-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 9080
      name: productpage-http
      protocol: HTTP
    hosts:
    - "webserver.ton.io"
EOF

cat <<EOF | kubectl apply -f -

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-vs
  namespace: default
spec:
  hosts:
  - "webserver.ton.io"
  gateways:
  - productpage-gateway
  http:
  - route:
    - destination:
        host: productpage
        port:
          number: 9080
EOF


for i in `seq 1 100`; do curl -s -o /dev/null http://webserver.ton.io:9080/productpage; done



  579  while true; do     echo "------";     curl -s -i websever.ton.io:9080 | head -2;     sleep 2; done
