nginx-full.yaml
cat <<EOF | kubectl apply -f -

apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    service: nginx-svc
  name: nginx-svc
  namespace: default

spec:
  ports:
  - port: 5000
    targetPort: 80
    name: http-nginx
    protocol: TCP
  selector:
    app: nginx
  sessionAffinity: None

EOF

##################################

cat <<EOF | kubectl apply -f -

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-v1
  labels:
    app: nginx
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      annotations:
         sidecar.istio.io/inject: "true"
      labels:
        app: nginx
        version: v1
        
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
EOF

##################################
cat <<EOF | kubectl apply -f -

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 5000
      name: nginx-http
      protocol: HTTP
    hosts:
    - "webserver.ton.io"
EOF

#####################################

cat <<EOF | kubectl apply -f -

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
  namespace: default
spec:
  hosts:
  - "webserver.ton.io"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx-svc
        subset: v1
        port:
          number: 5000
      weight: 50    
    - destination:
        host: nginx-svc
        subset: v2
        port:
          number: 5000
      weight: 50 
EOF

#########################################

cat <<EOF | kubectl apply -f -

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
  namespace: default
spec:
  host: nginx-svc
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
    tls:
      mode: DISABLE
    connectionPool:
      tcp:
        maxConnections: 100
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
EOF
